change in Space App

--- a/Introduction to the specialty/14_04_25.tex
+++ b/Introduction to the specialty/14_04_25.tex
@@ -31,5 +31,5 @@
 
 \textit{Ядро} "--- базовая часть операционной системы, которая управляет памятью, процессами, устройствами и обеспечивает безопасность и сетевые функции
 
-\textit{Чат"=бот} "--- это программа, которая имитирует реальный разговор с пользователем.
-\end{document}
+\textit{Чат"=бот} "--- это программа, которая имитирует реальный разговор с
+пользователем. \end{document}
