first_task_latex

--- a/StartLatex/first_task.tex
+++ b/StartLatex/first_task.tex
@@ -4,184 +4,26 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian]{babel}
 
+\title{Избранные произведения}
+\author{Даниил Хармс}
+\date{}
+
 \begin{document}
 
-Даниил Хармс. 
+\maketitle{}
+\section*{65. СЕМЬ  КОШЕК}
+\input{65.txt}
 
+\section*{66. ХРАБРЫЙ  ЕЖ}
+\input{66.txt}
 
+\section*{67. КАРЬЕРА ИВАНА ЯКОВЛЕВИЧА АНТОНОВА}
+\input{67.txt}
 
-65. СЕМЬ  КОШЕК
+\section*{68.}
+\input{68.txt}
 
-Вот так история! Не знаю, что делать. Я совершенно запутался. Ничего разобрать
-не могу. Посудите сами: поступил я сторожем на кошачью выставку.
+\section*{69.}
+\input{69.txt}
 
-Выдали мне кожаные перчатки, чтобы кошки меня за пальцы не цапали, и велели
-кошек по клеткам рассаживать и на каждой клетке надписывать - как которую
-кошку зовут.
-
-- Хорошо, - говорю я, - а только как зовут этих кошек?
-
-- А вот, - говорят, - кошку,которая сле- ва, зовут Машка, рядом с ней сидит
-   Пронька, потом Бубенчик, а эта Чурка, а эта Мурка, а эта Бурка, а эта
-   Штукатурка.
-
-Вот остался я один с кошками и думаю: "Выкурюка я сначала трубочку, а уж потом
-рассажу этих кошек по клеткам".
-
-Вот курю я трубочку и на кошек смотрю.
-
-Одна лапкой мордочку моет, другая на по- толок смотрит, третья по комнате
-гуляет, че- твертая кричит страшным голосом, еще две кошки друг на друга шипят,
-а одна подошла ко мне и меня за ногу укусила.
-
-Я вскочил, даже трубку уронил. 
-- Вот, - кричу, - противная кошка! Ты даже и на кошку не похожа. Пронька ты или
-  Чурка, или, может быть, ты Штукатурка?
-
-Тут вдруг я понял, что я всех кошек перепутал. Которую как зовут - совершенно
-не знаю.
-
-- Эй, - кричу, - Машка! Пронька! Бубенчик! Чурка! Мурка! Бурка! Штукатурка!
-
-А кошки на меня ни малейшего внимания не обращают.
-
-Я им крикнул:
-- Кис-кис-кис!
-
-Тут все кошки зараз ко мне свои головы повернули.
-
-Что тут делать?
-
-Вот кошки забрались на подоконник, по- вернулись ко мне спиной и давай в окно
-смотреть.
-
-Вот они все тут сидят, а которая тут Штукатурка и которая тут Бубенчик?
-
-Ничего я разобрать не могу.
-
-Я думаю так, что только очень умный человек сумеет отгадать,как какую кошку
-зовут.
-
-66. ХРАБРЫЙ  ЕЖ
-
-Стоял на столе ящик.
-
-Подошли звери к ящику, стали его осматривать, обнюхивать и облизывать.
-
-А ящик-то вдруг - раз, два, три - и открылся.
-
-А из ящика-то - раз, два, три - змея выскочила.
-
-Испугались звери и разбежались.
-
-Один еж не испугался, кинулся на змею и
-- раз, два, три - загрыз ее.
-
-А потом сел на ящик и закричал: "Кукаре- ку!".
-
-Нет, не так! Еж закричал: "Ав-авав!".
-
-Нет, и не так! Еж закричал: "Мяу-мяу- мяу!".
-
-Нет, опять не так! Я и сам не знаю как.
-
-Кто знает, как ежи кричат?
-
-67. КАРЬЕРА
-         ИВАНА ЯКОВЛЕВИЧА АНТОНОВА
-    
-Это случилось еще до революции.
-    
-Одна купчиха зевнула, а к ней в рот залетела кукушка.
-    
-Купец прибежал на зов своей супруги и, моментально сообразив, в чем дело,
-поступил самым остроумным способом.
-    
-С тех пор он стал известен всему населению города и его выбрали в сенат.
-    
-Но прослужив года четыре в сенате, несчастный купец однажды вечером зевнул, и
-ему в рот залетела кукушка.
-    
-На зов своего мужа прибежала купчиха и поступила самым остроумным способом.
-    
-Слава о ее находчивости распространилась по всей губернии, и купчиху повезли в
-столицу показать метрополиту.
-    
-Выслушиваяя длинный рассказ купчихи метрополит зевнул, и ему в рот залетела
-кукушка.
-    
-На громкий зов метрополита прибежал Иван Яковлевич Григорьев и поступил самым
-остроумным способом.
-    
-За это Ивана Яковлевича Григорьва переименовали в Ивана Яковлевича Антонова и
-представили царю.
-    
-И вот теперь становится ясным, каким образом Иван Яковлевич Антонов сделал
-себе карьеру.
-
-                         8 января 1935 года.
-
-68.
-Все люди любят деньги: и гладят их, и целуют, и к сердцу прижимают, и
-заворачивают их в красные тряпочки, и няньчат их, как куклу. А некоторые
-заключают деньзнак в рамку, вешают его на стену и поклоняяются ему как иконе.
-    
-Некоторые кормят свои деньги: открывают им рты и суют туда самые жирные куски
-своей пищи.
-    
-В жару несут деньги в холодный погреб, а зимой, в лютые морозы, бросают деньги в
-печку, в огонь.
-    
-Некоторые просто разговаривают со своими деньгами, или читают им вслух
-интересные книги, или поют им приятные песни.
-    
-Я же не отдаю деньгам особого внимания и просто ношу из в кошельке или в
-бумажнике и по мере надобности трачу их. Шибейя!
-
-69.
-    
-- Видите-ли, - сказал он, - я видел как вы с ними катались третьего дня на
-  лодке. Один из них сидел на руле, двое гребли, а четвертый сидел рядом с вами
-  и говорил. Я долго стоял на берегу и смотрел, как гребли те двое. Да, я могу
-  смело утверждать, что они хотели утопить вас. Так гребут только перед
-  убийством.
-    
-Дама в желтых перчатках посмотрела на Клопова.
-    
-- Что это значит? - сказала она. - Как это так можно особенно грести перед
-  убийст- вом? И потом, какой смысл им топить меня?
-    
-Клопов резко повернулся к даме и сказал:
-
-- Вы знаете, что такое медный взгяд?
-    
-- Нет, - сказала дама, невольно отодвигаясь от Клопова.
-    
-- Ага, - сказал Клопов. 
-- Когда тонкая фарфоровая чашка падает со шкапа и летит вниз, то в тот момент,
-  пока она еще летит по воздуху, вы уже знаете, что она коснетс пола и
-  разлетится на куски. А я знаю, что если человек, взгянув на другого человека
-  медным взгядом, то уж рано или поздно он не- минуемо убьет его.
-    
-- Они смотрели на меня медным взгядом? - спросила дама в желтых перчатках.
-    
-- Да, сударыня, - сказал Клопов и надел шляпу.
-    
-Некоторое времяя оба молчали.
-    
-Клопов сидел, опустив низко голову.
-    
-- Простите меня, - вдруг сказал он тихо.
-    
-Дама в желтых перчатках с удивлением смотрела на Клопова и мосчала.
-    
-- Это все неправда, - сказал Клопов. 
-
-- Я выдумал про медный взгяд сейчас, вот тут, сидя с вами на скамейке. Я, видите
-  ли, разбил сегодня свои часы, и мне все представляется в мрачном свете.
-    
-Клопов вынул из кармана платок, развер- нул его и протянул даме разбитые часы.
-    
-- Я носил их шестнадцать лет. Вы понимаете, что это значит? Разбить часы,
-  которые шестнадцать лет тикали у меня вот тут под сердцем? У вас есть часы?
 \end{document}
